@@ -4614,4 +4614,5 @@ Changelog for GXemul:
 		(The graphics displayed when attempting to run the original
 		ROM now looks more reasonable.)
 		Updating NetBSD/dreamcast test instructions: 6.1.1 -> 6.1.4.
+		Updating NetBSD/pmax install instructions: 6.1.1 -> 6.1.4.
 
